[gd_scene load_steps=7 format=3 uid="uid://8apwto8b72gr"]

[ext_resource type="Script" path="res://game/scripts/menus/StoryMenu.gd" id="1_1tf5i"]
[ext_resource type="FontFile" uid="uid://bo3t3laebx8h8" path="res://assets/fonts/vcr.ttf" id="2_5d4fk"]
[ext_resource type="Texture2D" uid="uid://dpis72id0bult" path="res://references/Story_Mode.png" id="2_ejrru"]

[sub_resource type="LabelSettings" id="LabelSettings_8e653"]
font = ExtResource("2_5d4fk")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_3ll8u"]
font = ExtResource("2_5d4fk")
font_size = 32
font_color = Color(0.898039, 0.341176, 0.466667, 1)

[sub_resource type="LabelSettings" id="LabelSettings_aqkos"]
line_spacing = -0.8
font = ExtResource("2_5d4fk")
font_size = 32
font_color = Color(0.898039, 0.341176, 0.466667, 1)

[node name="StoryMenu" type="Node2D"]
script = ExtResource("1_1tf5i")

[node name="Top_Bar" type="ColorRect" parent="."]
offset_right = 1281.0
offset_bottom = 55.0
color = Color(0, 0, 0, 1)

[node name="Yellow_Background" type="ColorRect" parent="."]
offset_top = 56.0
offset_right = 1281.0
offset_bottom = 455.0
color = Color(0.976471, 0.811765, 0.317647, 1)

[node name="UI" type="Node" parent="."]

[node name="Namespace" type="Label" parent="UI"]
offset_left = 999.0
offset_top = 11.0
offset_right = 1265.0
offset_bottom = 43.0
text = "Week Namespace"
label_settings = SubResource("LabelSettings_8e653")
horizontal_alignment = 2
uppercase = true

[node name="Score_Text" type="Label" parent="UI"]
offset_left = 14.0
offset_top = 11.0
offset_right = 261.0
offset_bottom = 43.0
text = "WEEK SCORE: 0"
label_settings = SubResource("LabelSettings_8e653")

[node name="Tracks" type="Label" parent="UI"]
offset_left = 136.0
offset_top = 501.0
offset_right = 250.0
offset_bottom = 533.0
text = "Tracks"
label_settings = SubResource("LabelSettings_3ll8u")
horizontal_alignment = 1
uppercase = true

[node name="Track_List" type="Label" parent="UI"]
offset_left = 108.0
offset_top = 559.0
offset_right = 279.0
offset_bottom = 647.0
text = "Track 1
Track 2
Track 3"
label_settings = SubResource("LabelSettings_aqkos")
horizontal_alignment = 1
clip_text = true
uppercase = true

[node name="Bottom_Bar" type="ColorRect" parent="."]
offset_top = 455.0
offset_right = 1281.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="Reference" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.203922)
position = Vector2(641, 360)
texture = ExtResource("2_ejrru")
